--- a/file1.html
+++ b/file1.html
@@ -1,3 +1,5 @@
 changing file to see how pull command works
 again adding one line to verify the pull command
 hi this is file1 in master branch
+hello today is sunday and tomorrow will be monday 
+Monday is boring always
